--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.75.3",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.0",
